--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
         <p>Estadística especializada en psicometría y modelos de respuesta al ítem. Desde Matefriendly aplica análisis de datos e inteligencia artificial para diseñar evaluaciones que personalizan el aprendizaje y apoyan la toma de decisiones docentes.</p>
       </div>
       <div class="team-member">
-        <img src="eduardo-soto.jpg" alt="Eduardo Soto">
+        <img src="Eduardo_Soto_face_circle.png" alt="Eduardo Soto">
         <h4>Eduardo&nbsp;Soto</h4>
         <p>Ingeniero Civil Industrial (MBA) con experiencia en procesos y análisis de datos. Ha liderado proyectos en diversas industrias. En Matefriendly integra tecnología, pedagogía y análisis para crear experiencias de aprendizaje prácticas y sostenibles.</p>
       </div>
       <div class="team-member">
-        <img src="paula-valdebenito.jpg" alt="Paula Valdebenito">
+        <img src="Paula_Valdebenito_face_circle.png" alt="Paula Valdebenito">
         <h4>Paula&nbsp;Valdebenito</h4>
         <p>Matemática con experiencia en docencia, investigación y análisis de datos. En Matefriendly diseña experiencias innovadoras que combinan tecnología, pedagogía y acompañamiento emocional, acercando las matemáticas de manera clara y significativa a cada niña y niño.</p>
       </div>
